# PaperFlow

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
app/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.setup.ts
app/public/: index.html
app/src/: app.tsx  main.tsx
docs/: ARCHITECTURE_OVERVIEW.md  BUILD_GUIDE.md  CHANGELOG.md  INSTALLATION.md  README.md  ROADMAP.md  SECURITY_POLICY.md  TROUBLESHOOTING.md  bdd.md  ddd.md  prd.md  sdd.md  tdd.md  technical-blueprint.md
docs/bdd/: feature_note_taking.md  feature_pdf_reading.md  feature_search_review.md  feature_workspace_management.md
docs/ddd/: context_map.md  domain_model.md  entity_relationship.md  glossary.md
docs/design/: note_management_page.md  shared_state_plan.md
docs/user/: FAQ.md  (+3 more)
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_add_tags.sql
src-tauri/sql/: 0001_init.sql
src-tauri/src/: db.rs  main.rs  note.rs  paper.rs
src-tauri/src/commands/: mod.rs  note.rs  paper.rs  preview.rs  review.rs  search.rs  settings.rs  shortcuts.rs  system.rs  workspace.rs
src-tauri/src/domain/: mod.rs  note.rs  paper.rs  search.rs  settings.rs  stats.rs  tag.rs  workspace.rs
src-tauri/src/services/: cache.rs  config.rs  db.rs  file_watch.rs  migration.rs  mod.rs  repo.rs  state.rs
src-tauri/src/services/pdf/: anchor.rs  snapshot.rs
src-tauri/src/services/search/: fts.rs  mod.rs
src-tauri/src/services/stats/: tracker.rs
src-tauri/src/telemetry/: error.rs  logging.rs  mod.rs
src-tauri/src/utils/: path.rs  time.rs
(+52 files in other folders)
