[package]
name = "paperflow-tauri"
version = "0.1.0"
edition = "2021"
description = "PaperFlow Tauri backend for Windows"
license = "MIT"

[dependencies]
anyhow = "1"
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled", "unlock_notify"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde_json = "1"
tauri = { version = "1", features = ["api-all"] }
tauri-plugin-log = "0.2"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = "1", features = [] }

