[package]
name = "paperflow"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = []
